--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background{
+  background-color: #bdbdbd;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.background-up{
+  position: absolute;
+  display:flex;
+  background-color: #05a684;
+  padding: 10vh 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.background-down{
+  position: absolute;
+  display:flex;
+  background-color: #dfdfdf;
+  margin-top: 10vh 100%;
+
+}
+
+.App{
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  background-color: #dadbd3;
+}
+
+.app_container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #ededed;
+  height: 90vh;
+  width: 95vw;
+  box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.75);
+  z-index: 20;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
