--- a/src/App.css
+++ b/src/App.css
@@ -2,40 +2,24 @@
   margin: 0;
 }
 
+body{
+  overflow:hidden; 
+}
+
 .background{
-  background-color: #bdbdbd;
-}
-
-.background-up{
   position: absolute;
-  display:flex;
-  background-color: #05a684;
-  padding: 10vh 100%;
-}
-
-.background-down{
-  position: absolute;
-  display:flex;
-  background-color: #dfdfdf;
-  margin-top: 10vh 100%;
-
 }
 
 .App{
   display: grid;
   place-items: center;
-  height: 100vh;
-  background-color: #dadbd3;
 }
 
 .app_container{
   display: flex;
   background-color: #ededed;
-  height: 90vh;
-  width: 95vw;
+  height: 100vh;
+  width: 100vw;
   box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.75);
   z-index: 20;
 }
-
-
-
